--- a/Ore/Ore.csproj
+++ b/Ore/Ore.csproj
@@ -49,7 +49,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Buffer.cs" />
+    <Compile Include="Engine.cs" />
     <Compile Include="Enums.cs" />
+    <Compile Include="Math3D\Matrix.cs" />
+    <Compile Include="Math3D\Quaternion.cs" />
+    <Compile Include="Math3D\Vector.cs" />
+    <Compile Include="OpenCL\OpenCLManager.cs" />
+    <Compile Include="OpenCL\OpenCLScript.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Window.cs" />
   </ItemGroup>
